# flux-ssl-mgr

./: AUDIT_FIXES.md  AUDIT_REPORT.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  README.md  ROADMAP.md  auto-sign.sh  claude.md  config.toml.example  flux-ssl-mgr-ansible.txt  flux-ssl-mgr.sh  web-roadmap.md
old/: flux-ssl-mgr-ansible.txt  flux-ssl-mgr.sh
src/: batch.rs  config.rs  error.rs  interactive.rs  lib.rs  main.rs  output.rs
src/ca/: intermediate.rs  mod.rs
src/crypto/: cert.rs  csr.rs  key.rs  mod.rs
src/web/: mod.rs  server.rs
src/web/handlers/: cert_handler.rs  csr_handler.rs  info_handler.rs  mod.rs  tests.rs
src/web/models/: errors.rs  mod.rs  requests.rs  responses.rs
src/web/routes/: mod.rs
static/css/: styles.css
static/js/: app.js  cert-generate.js  cert-info.js  csr-upload.js
templates/: cert-generate.html  cert-info.html  csr-upload.html  index.html
tests/: web_integration_tests.rs
